--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "snapdragon": "^0.12.0",
     "snapdragon-node": "^2.1.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
